--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".SignUp">
 
         <ImageView
@@ -24,13 +23,13 @@
             app:srcCompat="@drawable/img" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtname"
+            android:id="@+id/text1"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
             android:textColorHint="#909090"
             app:boxStrokeColor="#4CAF50"
-            app:layout_constraintBottom_toTopOf="@+id/txtmobile"
+            app:layout_constraintBottom_toTopOf="@+id/text3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +37,7 @@
             tools:ignore="MissingConstraints">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_person_24"
@@ -48,7 +48,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtmobile"
+            android:id="@+id/text3"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
@@ -57,11 +57,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtname"
+            app:layout_constraintTop_toBottomOf="@+id/text1"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="258dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtmobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_call_24"
@@ -73,7 +74,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtEmail"
+            android:id="@+id/text4"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
@@ -82,23 +83,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtmobile"
+            app:layout_constraintTop_toBottomOf="@+id/text3"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="258dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtemail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_email_24"
                 android:drawablePadding="10dp"
                 android:hint="Enter E-Mail"
                 android:inputType="textEmailAddress"
-                android:maxLength="10"
+                android:maxLength="50"
                 android:textColor="#000000" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtPass"
+            android:id="@+id/text5"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
@@ -107,11 +109,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
+            app:layout_constraintTop_toBottomOf="@+id/text4"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="258dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtpass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_password_24"
@@ -123,7 +126,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtConPass"
+            android:id="@+id/text6"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
@@ -132,16 +135,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPass"
+            app:layout_constraintTop_toBottomOf="@+id/text5"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteY="258dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtconpass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="10dp"
-                android:hint="Enter Conform Password"
+                android:hint="Enter Confirm Password"
                 android:inputType="textPassword"
                 android:maxLength="10"
                 android:textColor="#000000" />
@@ -149,7 +153,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/txtDl"
+            android:id="@+id/text7"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="374dp"
             android:layout_height="71dp"
@@ -159,17 +163,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.486"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtConPass"
+            app:layout_constraintTop_toBottomOf="@+id/text6"
             tools:ignore="MissingConstraints">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtDl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/baseline_drive_eta_24"
                 android:drawablePadding="10dp"
-                android:hint="Enter Aadhar Card Number"
-                android:inputType="number"
-                android:maxLength="10"
+                android:hint="Enter Driving Licence Number"
+                android:inputType="text"
+                android:maxLength="15"
                 android:textColor="#000000" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -194,23 +199,49 @@
             android:layout_height="35dp"
             android:layout_marginStart="16dp"
             android:gravity="center"
-            android:text="Upload Aadhar Card Pic"
+            android:text="Upload Driving Licence Pic"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintBottom_toBottomOf="@+id/uploadUserDl"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            app:layout_constraintTop_toTopOf="@+id/uploadUserDl" />
 
         <ImageButton
-            android:id="@+id/imageView3"
+            android:id="@+id/uploadUserDl"
             android:layout_width="90dp"
             android:layout_height="72dp"
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/txtDl"
-            app:srcCompat="@drawable/baseline_document_scanner_24" />
+            app:layout_constraintTop_toBottomOf="@+id/text7"
+            app:srcCompat="@drawable/baseline_document_scanner_24"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <TextView
+            android:id="@+id/txt"
+            android:layout_width="229dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="16dp"
+            android:gravity="center"
+            android:text="Upload your profile pic"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/Profilepic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/Profilepic" />
+
+        <ImageButton
+            android:id="@+id/Profilepic"
+            android:layout_width="90dp"
+            android:layout_height="72dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toEndOf="@+id/txt"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:srcCompat="@drawable/baseline_document_scanner_24"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -219,8 +250,8 @@
             android:layout_height="43dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="4dp"
-            app:layout_constraintEnd_toEndOf="@+id/txtDl"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintEnd_toEndOf="@+id/text7"
+            app:layout_constraintTop_toBottomOf="@+id/Profilepic" />
 
         <TextView
             android:id="@+id/textView3"
@@ -231,7 +262,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/spinner"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/txt"
             app:layout_constraintTop_toTopOf="@+id/spinner" />
 
         <RadioGroup
@@ -244,7 +275,7 @@
             app:layout_constraintTop_toBottomOf="@+id/spinner">
 
             <RadioButton
-                android:id="@+id/radioButton6"
+                android:id="@+id/rdb_male"
                 android:layout_width="match_parent"
                 android:layout_height="31dp"
                 android:text="Male"
@@ -252,7 +283,7 @@
                 android:textStyle="bold" />
 
             <RadioButton
-                android:id="@+id/radioButton7"
+                android:id="@+id/rdb_female"
                 android:layout_width="match_parent"
                 android:layout_height="31dp"
                 android:text="Female"
@@ -260,7 +291,7 @@
                 android:textStyle="bold" />
 
             <RadioButton
-                android:id="@+id/radioButton5"
+                android:id="@+id/rdb_others"
                 android:layout_width="match_parent"
                 android:layout_height="31dp"
                 android:text="Other"
@@ -270,10 +301,10 @@
         </RadioGroup>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnregister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="Register"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -292,7 +323,16 @@
             app:layout_constraintTop_toTopOf="@+id/radioGroup"
             app:layout_constraintVertical_bias="0.448" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/btnregister"
+            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+            app:layout_constraintStart_toEndOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
