--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,14 +36,15 @@
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:inputType="number"
-            android:maxLength="10"
             android:drawableLeft="@drawable/phone"
+            android:drawablePadding="10dp"
             android:hint="ENTER A PHONE NUMBER"
-            android:textColor="#000000"/>
+            android:inputType="text"
+            android:maxLength="50"
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -62,18 +63,19 @@
         tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_login_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:inputType="textPassword"
             android:drawableLeft="@drawable/otp"
+            android:drawablePadding="10dp"
 
             android:hint="ENTER A PASSWORD"
-            android:textColor="#000000"/>
+            android:inputType="textPassword"
+            android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_login"
         android:layout_width="251dp"
         android:layout_height="57dp"
         android:gravity="center"
@@ -98,6 +100,6 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
