--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,4 +7,10 @@
     <style name="TEXT">
         <item name="android:textColor">#FFFFFF</item>
     </style>
+    <style name="SCREEN">
+        <item name="android:background">#232323</item>
+    </style>
+    <style name="lin">
+        <item name="android:background">#232323</item>
+    </style>
 </resources>
