--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,32 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.CarOnRentRenter" parent="Base.Theme.CarOnRentRenter" />
+    <style name="Base.Theme.CarOnRentRenter." parent="Base.Theme.CarOnRentRenter" />
     <style name="TEXT">
         <item name="android:textColor">#000</item>
+    </style>
+    <style name="nightModeswitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/night_mode</item>
+        <item name="colorSwitchThumbNormal">#FFFFFF</item>
+    </style>
+
+    <!-- Notification -->
+    <style name="notificationswitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/notification</item>
+        <item name="colorSwitchThumbNormal">#FFFFFF</item>
+    </style>
+    <!-- private account -->
+    <style name="privateaccountswitch" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/private_account</item>
+        <item name="colorSwitchThumbNormal">#FFFFFF</item>
+    </style>
+
+    <!-- light Mode-->
+    <style name="SCREEN">
+        <item name="android:background">#FFF</item>
+    </style>
+    <style name="BUTTON">
+        <item name="android:background">@android:color/holo_blue_dark</item>
+        <item name="android:textColor">#FFF</item>
     </style>
 </resources>
