--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,11 +39,12 @@
             android:id="@+id/txt_email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/phone"
+            android:drawableLeft="@drawable/baseline_email_24"
             android:drawablePadding="10dp"
-            android:hint="ENTER A PHONE NUMBER"
+            android:hint="Enter Email"
             android:inputType="text"
             android:maxLength="50"
+            android:minHeight="48dp"
             android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -69,7 +70,7 @@
             android:drawableLeft="@drawable/otp"
             android:drawablePadding="10dp"
 
-            android:hint="ENTER A PASSWORD"
+            android:hint="Enter Password"
             android:inputType="textPassword"
             android:textColor="#000000" />
     </com.google.android.material.textfield.TextInputLayout>
