--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -70,6 +70,7 @@
                 android:hint="Enter Mobile"
                 android:inputType="number"
                 android:maxLength="10"
+                android:minHeight="48dp"
                 android:textColor="#000000" />
         </com.google.android.material.textfield.TextInputLayout>
 
