--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="green">#18a73e</color>
+    <color name="green">#FF009688</color>
+<!--    <color name="green">#18a73e</color>-->
     <color name="gray">#6f6f78</color>
     <color name="light_gray">#ebebeb</color>
 
