--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -314,7 +314,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/viewPopular1"
+                android:id="@+id/viewNew"
                 android:layout_marginBottom="30dp"
                 android:clipToPadding="false"
                 android:paddingEnd="24dp"
