--- a/app/src/main/res/layout/item_view_holder.xml
+++ b/app/src/main/res/layout/item_view_holder.xml
@@ -15,7 +15,7 @@
             android:id="@+id/pic"
             android:layout_width="200dp"
             android:layout_height="150dp"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             android:src="@drawable/img"
             app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
