--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -329,6 +329,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/btnregister"
             app:layout_constraintEnd_toStartOf="@+id/radioGroup"
             app:layout_constraintStart_toEndOf="@+id/textView4"
