--- a/app/src/main/res/layout/activity_car_menu.xml
+++ b/app/src/main/res/layout/activity_car_menu.xml
@@ -24,26 +24,26 @@
         app:searchIcon="@drawable/baseline_search_24"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView1"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="742dp"
         android:layout_below="@+id/search"
         android:layout_marginTop="40dp"
         android:scrollbars="vertical" />
 
-    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--        android:id="@+id/fab"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_alignParentEnd="true"-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:layout_marginStart="40dp"-->
-    <!--        android:layout_marginTop="40dp"-->
-    <!--        android:layout_marginEnd="40dp"-->
-    <!--        android:layout_marginBottom="41dp"-->
-    <!--        android:backgroundTint="@color/lavender"-->
-    <!--        android:src="@drawable/baseline_add_24"-->
-    <!--        app:tint="@color/white" />-->
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginStart="40dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:layout_marginEnd="40dp"-->
+<!--        android:layout_marginBottom="41dp"-->
+<!--        android:backgroundTint="@color/lavender"-->
+<!--        android:src="@drawable/baseline_add_24"-->
+<!--        app:tint="@color/white" />-->
 
 
 </RelativeLayout>
