--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -169,7 +169,7 @@
 
                             android:layout_marginStart="70dp"
                             android:src="@drawable/comments"
-                            app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                            app:layout_constraintBottom_toBottomOf="@+id/txtMob"
                             app:layout_constraintStart_toEndOf="@+id/txtrname"
                             app:layout_constraintTop_toTopOf="@+id/txtrname" />
 
@@ -180,7 +180,7 @@
 
                             android:layout_marginEnd="16dp"
                             android:src="@drawable/baseline_call_24"
-                            app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                            app:layout_constraintBottom_toBottomOf="@+id/txtMob"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/txtrname" />
 
@@ -200,7 +200,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:text="Devang Sarvaiya"
+                            android:hint="Name"
                             android:textColor="#000000"
                             android:textSize="16sp"
                             android:textStyle="bold"
@@ -208,7 +208,7 @@
                             app:layout_constraintTop_toTopOf="@+id/img_renter" />
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/txtMob"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="148dp"
@@ -471,7 +471,7 @@
                             app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/txtMob"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -521,7 +521,7 @@
                             app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/txtMob"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
@@ -572,7 +572,7 @@
                             app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
                         <TextView
-                            android:id="@+id/textView12"
+                            android:id="@+id/txtMob"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
